deprecated/kyverno/C0004-container-secret-not-env/resource.yaml
# SPDX-FileCopyrightText: Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko-1
  labels:
    app: myapp
spec:
  containers:
  - name: goproxy
    image: k8s.gcr.io/goproxy:0.1
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko-2
  labels:
    app: myapp
spec:
  containers:
  - name: goproxy
    image: k8s.gcr.io/goproxy:0.1
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ok
  labels:
    app: myapp
spec:
  containers:
    - name: goproxy
      image: k8s.gcr.io/goproxy:0.1
      volumeMounts:
      - name: foo
        mountPath: "/etc/foo"
        readOnly: true
  volumes:
    - name: foo
      secret:
        secretName: mysecret
